--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
     <section id="nyehehehehe">
         <div class="container">
             <ul>
-                <li>🐱-  Nyehehehe</li>
+                <li>🐱. Anthony Pinto Zanabria <br>
+                    <a href="https://anthonypintozanabria.github.io/page/" target="_blank"/a>
+                </li>
+                <li>🐱. Gerardo Gutierrez Celis <br>
+                </li>
+                <li>🐱. Melanie Chacnama <br>
+                </li>
             </ul>
         </div>
     </section>
