--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="container">
             <ul>
                 <li>🐱. Anthony Pinto Zanabria <br>
-                    <a href="https://anthonypintozanabria.github.io/page/" target="_blank"/a>
+                    <a href="https://anthonypintozanabria.github.io/page/" target="_blank">https://anthonypintozanabria.github.io/page/</a>
                 </li>
                 <li>🐱. Gerardo Gutierrez Celis <br>
                 </li>
