--- a/index.html
+++ b/index.html
@@ -58,13 +58,9 @@
     <section id="nyehehehehe">
         <div class="container">
             <ul>
-                <li>🐱. Anthony Pinto Zanabria <br>
-                    <a href="https://anthonypintozanabria.github.io/page/" target="_blank">https://anthonypintozanabria.github.io/page/</a>
-                </li>
-                <li>🐱. Gerardo Gutierrez Celis <br>
-                </li>
-                <li>🐱. Melanie Chacnama <br>
-                </li>
+                <li><a href="https://anthonypintozanabria.github.io/page/">🐱. Anthony Pinto Zanabria</a></li>
+                <li>🐱. Gerardo Gutierrez Celis</li>
+                <li>🐱. Melanie Chacnama</li>
             </ul>
         </div>
     </section>
