--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="nyehehehehe">
         <div class="container">
             <ul>
-                <li><a href="https://anthonypintozanabria.github.io/page/">🐱. Anthony Pinto Zanabria</a></li>
+                <li><a href="https://anthonypintozanabria.github.io/">🐱. Anthony Pinto Zanabria</a></li>
                 <li>🐱. Gerardo Gutierrez Celis</li>
                 <li>🐱. Melanie Chacnama</li>
             </ul>
