--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="container">
             <ul>
                 <li><a href="https://anthonypintozanabria.github.io/">🐱. Anthony Pinto Zanabria</a></li>
-                <li>🐱. Gerardo Gutierrez Celis</li>
-                <li>🐱. Melanie Chacnama</li>
+                <li><a href="https://gerardogutierrezcelis.github.io/GerardoDanielHenryGutierrezCelis/">🐱. Gerardo Gutierrez Celis</a></li>
+                <li><a href="https://xhyl3m.github.io/Melani_Chacnama/">🐱. Melanie Chacnama</a></li>
             </ul>
         </div>
     </section>
