--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <ul>
                 <li><a href="https://anthonypintozanabria.github.io/">🐱. Anthony Pinto Zanabria</a></li>
                 <li><a href="https://gerardogutierrezcelis.github.io/GerardoDanielHenryGutierrezCelis/">🐱. Gerardo Gutierrez Celis</a></li>
-                <li><a href="https://xhyl3m.github.io/Melani_Chacnama/">🐱. Melanie Chacnama</a></li>
+                <li><a href="https://xhyl3m.github.io/Melani-Naomi-Chacnama-Mendoza/">🐱. Melanie Chacnama</a></li>
             </ul>
         </div>
     </section>
