--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Alisson, Alissonsalinas, AlissonSalinasAlvarez">
+    <meta name="description"
+          content="Mi pagina">
+    <meta charset="utf-8"/>
+    <meta name="author" content="Alisson" />
+    <meta name="copyright" content="Alisson" />
+    <meta name="robots" content="index"/>
+    <meta name="robots" content="follow"/>
     <title>ICC</title>
     <link rel="stylesheet" href="index.css">
 </head>
