--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="robots" content="index"/>
     <meta name="robots" content="follow"/>
     <title>ICC</title>
+    <link rel="canonical" href="https://alissonsalinasalvarez.github.io/"/>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -19,9 +20,9 @@
         <div class="container">
             <p class="logo">Mi Primer Programa :D</p>
             <nav>
-                <a href="#">Sobre mi</a>
-                <a href="#">¿Juegas?</a>
-                <a href="#">Nyehehehe</a>
+                <a href="https://ucsp.edu.pe">UCSP</a>
+                <a href="https://www.youtube.com/watch?v=gcGTPAk6aRA&list=RDgcGTPAk6aRA&start_radio=1">Música</a>
+                <a href="https://www.youtube.com/watch?v=GWJG0KEpKJI&list=RDGWJG0KEpKJI&start_radio=1">Nyehehe..</a>
             </nav>
         </div>
     </header>
